--- a/package.json
+++ b/package.json
@@ -1,4 +1,10 @@
 {
+  "name": "fastfeet",
+  "version": "1.0.0",
+  "main": "index.js",
+  "repository": "git@github.com:rocketseat-gostack-course/fastfeet.git",
+  "author": "Marcelo XP <marceloxp@gmail.com>",
+  "license": "MIT",
   "devDependencies": {
     "eslint": "^6.8.0",
     "eslint-config-airbnb-base": "^14.0.0",
@@ -6,5 +12,5 @@
     "eslint-plugin-import": "^2.20.1",
     "eslint-plugin-prettier": "^3.1.2",
     "prettier": "^1.19.1"
-  }
+  },
 }
