--- a/package.json
+++ b/package.json
@@ -5,12 +5,21 @@
   "repository": "git@github.com:rocketseat-gostack-course/fastfeet.git",
   "author": "Marcelo XP <marceloxp@gmail.com>",
   "license": "MIT",
+  "scripts": {
+    "dev": "nodemon src/server.js",
+    "dev:debug": "nodemon --inspect src/server.js"
+  },
   "devDependencies": {
     "eslint": "^6.8.0",
     "eslint-config-airbnb-base": "^14.0.0",
     "eslint-config-prettier": "^6.10.0",
     "eslint-plugin-import": "^2.20.1",
     "eslint-plugin-prettier": "^3.1.2",
-    "prettier": "^1.19.1"
+    "nodemon": "^2.0.2",
+    "prettier": "^1.19.1",
+    "sucrase": "^3.12.1"
   },
+  "dependencies": {
+    "express": "^4.17.1"
+  }
 }
